--- a/index (10).html
+++ b/index (10).html
@@ -11,12 +11,12 @@
         <section id="container">
             <!-- <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>matematica</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p>
+                        <p>qual o valor de PI?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>3,14</p>
                     </div>
                 </div>
             </article> -->
